--- a/src/app/root/shell/factures/factures.component.scss
+++ b/src/app/root/shell/factures/factures.component.scss
@@ -44,4 +44,9 @@
     color: #1677ff;
     border-color: #91caff;
   }
-  
+  /* your existing styles ... */
+
+.highlighted {
+  background: #fff3cd; /* soft yellow */
+  transition: background 0.8s ease;
+}
