--- a/src/app/shared/components/commun/side-menu/side-menu.component.html
+++ b/src/app/shared/components/commun/side-menu/side-menu.component.html
@@ -14,7 +14,7 @@
           <ul>
             <li nz-menu-item [nzSelected]="test ? true : false" routerLink="/bank/prelevements">Prélèvements</li>
             <li nz-menu-item [nzSelected]="test ? true : false" routerLink="/bank/operations">Operations</li>
-            <li nz-menu-item [nzSelected]="test ? true : false" routerLink="/bank/statement">statement</li>
+            <li nz-menu-item [nzSelected]="test ? true : false" routerLink="/bank/statement">Statement</li>
 
           </ul>
         </li>
