--- a/src/app/root/bank/prelevements/prelevements.component.scss
+++ b/src/app/root/bank/prelevements/prelevements.component.scss
@@ -1,36 +1,42 @@
 .show-hide-btn{
-    float: right;
-    margin-top: 15px;
-    margin-bottom: 15px;
+  float: right;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
-.carre-btn {
-    width: 40px;
-    height: 40px;
-    padding: 0;
-    font-size: 24px;
-    text-align: center;
-    line-height: 1;
-  }
 
-  .center-eye {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .eye-button i {
-    font-size: 24px;
-    color: #1890ff;
-    transition: transform 0.2s ease, color 0.2s ease;
-  }
-  
-  .eye-button:hover i {
-    transform: scale(1.3);
-    color: #40a9ff;
-  }
-  
-  .eye-disabled i {
-    font-size: 24px;
-    color: grey;
-    cursor: not-allowed;
-  }
+.carre-btn {
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  font-size: 24px;
+  text-align: center;
+  line-height: 1;
+}
+
+.center-eye {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.eye-button i {
+  font-size: 24px;
+  color: #1890ff;
+  transition: transform 0.2s ease, color 0.2s ease;
+}
+
+.eye-button:hover i {
+  transform: scale(1.3);
+  color: #40a9ff;
+}
+
+.eye-disabled i {
+  font-size: 24px;
+  color: grey;
+  cursor: not-allowed;
+}
+
+td input[nz-input] {
+  height: 32px;
+  padding: 4px 8px;
+}
